# llmfit

./: CHANGELOG.md  Cargo.toml
llmfit-core/data/: benchmark_cache.json
llmfit-core/src/: hardware.rs
llmfit-tui/: Cargo.toml
scripts/: scrape_hf_models.py
