[package]
name = "llmfit"
version.workspace = true
edition = "2024"
build = "build.rs"
authors = ["Alex Jones <alex@example.com>"]
description = "Right-size LLM models to your system hardware. Interactive TUI and CLI to match models against available RAM, CPU, and GPU."
license = "MIT"
repository = "https://github.com/AlexsJones/llmfit"
homepage = "https://github.com/AlexsJones/llmfit"
readme = "../README.md"
keywords = ["llm", "tui", "hardware", "inference", "models"]
categories = ["command-line-utilities"]

[[bin]]
name = "llmfit"
path = "src/main.rs"

[features]
default = []
nats = ["async-nats"]

[dependencies]
llmfit-core = { version = "0.9.0", path = "../llmfit-core" }
clap = { version = "4.6", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.0"
tabled = "0.20"
colored = "3.1"
csv = "1.4"
ratatui = "0.30"
crossterm = "0.29"
unicode-segmentation = "1.13"
unicode-width = "0.2"
arboard = "3.4"
dirs = "6.0"
axum = "0.8"
tokio = { version = "1.52", features = ["rt-multi-thread", "signal", "net", "io-std"] }
rmcp = { version = "1.7", features = ["server", "macros", "transport-io"] }
async-nats = { version = "0.48", optional = true }

[dev-dependencies]
http-body-util = "0.1"
tower = "0.5"
assert_cmd = "2.2"
